--- a/index (1).html
+++ b/index (1).html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-      <script src="ejercicio-3-act-4.js"></script>  
-      <!-- <script src="ejercicio-2-act-4.js"></script>  -->
-      <!-- <script src="ejercicio-4-act-4.js"></script> --> 
-       <!-- <script src="ejercicio-1-act-4-.js"></script> --> 
-      <!-- <script src="ejercicio-5-act-4.js"></script> --> 
+      <script src="./punto-3-act-4.js"></script> 
+    <!-- <script src="./punto-1-act-4- (1).js"></script> -->
+    <!-- <script src="./punto-2-act-4 (1).js"></script> -->
+    <!-- <script src="./punto-4-act-4.js"></script> -->
+    <!-- <script src="./punto-5-act-4.js"></script> -->
 </body>
 </html>
